--- a/demo/src/main/res/values/theme.xml
+++ b/demo/src/main/res/values/theme.xml
@@ -37,7 +37,7 @@
 
 	<style name="DialogStyleDark.Custom">
 		<!-- anything can be left out: -->
-		<item name="titleTextColor">@color/dialog_title_text_dark</item>
+		<item name="titleDialogTextColor">@color/dialog_title_text_dark</item>
 		<item name="titleSeparatorColor">@color/dialog_title_separator_dark</item>
 		<item name="messageTextColor">@color/dialog_message_text_dark</item>
 		<item name="buttonTextColor">@color/dialog_button_text_dark</item>
